--- a/pages/ContactUs.html
+++ b/pages/ContactUs.html
@@ -86,7 +86,7 @@
         </div>
 
 
-        <div class="row contactBgJ evenJ" style="padding-top: 40px; padding-bottom: 45px">
+        <div class="row contactBgJ evenJ contactPaddingJ">
             <div class="card cardRadiusJ">
                 <div class="centerJ">
                     <img src="../assets/Alarm.png" class="card-img-top contactIconsJ" alt="...">
@@ -192,7 +192,8 @@
                 <div class="card-body">
                     <h3 class="txtCenterJ dontBeAfraidBodySizeJ abrilFatfaceJ">ORDER IN PERSON</h3>
                     <div class="centerJ">
-                        <p class="card-text txtCenterJ contactUsBodySizeJ sansCollectionJ contactBodyTopPaddingJ orderTextJ2">
+                        <p
+                            class="card-text txtCenterJ contactUsBodySizeJ sansCollectionJ contactBodyTopPaddingJ orderTextJ2">
                             Are you not in the mood to make a phone call or you aren’t much of
                             an online person? If so, that’s completely fine, feel free to head to our establishment and
                             order at the register</p>
@@ -224,18 +225,21 @@
             <div class="col" style="padding-left: 2%;">
                 <div class="row">
                     <div class="col">
-                        <div class="row">
+                        <div class="row sansCollectionJ">
                             <p class="yellowJ abrilFatfaceJ footerFontSize2">HOURS</p>
-                            <p class="yellowJ footerFontSize ">Mon & Tue : 9 am - 5 pm</p>
+                            <p class="yellowJ footerFontSize">Mon & Tue : 9 am - 5 pm</p>
                             <p class="yellowJ footerFontSize">CLOSED WEDNESDAY</p>
                             <p class="yellowJ footerFontSize">Thu - Sun : 9 am - 5pm</p>
                         </div>
                     </div>
 
                     <div class="col">
-                        <div class="row">
+                        <div class="row sansCollectionJ">
                             <p class="yellowJ abrilFatfaceJ footerFontSize2">CONTACT US</p>
-                            <p class="yellowJ footerFontSize"><img src="../assets/phone symbol.png" alt=""><a class="yellowJ" href="" style="padding-left: 15px;">(209) 475-0652</a></p>
+                            <p class="yellowJ footerFontSize">
+                                <img src="../assets/phone symbol.png" alt="">
+                                <a class="yellowJ" href="" style="padding-left: 15px;">(209) 475-0652</a>
+                            </p>
                             <p class="yellowJ footerFontSize">3330 E Hammer Ln Ste</p>
                             <p class="yellowJ footerFontSize">C Stockton, CA 95212</p>
                         </div>
@@ -246,14 +250,47 @@
                             <p class="yellowJ abrilFatfaceJ footerFontSize2">LINKS</p>
                         </div>
                         <div class="row">
-                            <a class="footerIconsJ" href="https://m.facebook.com/profile.php?id=111693338885516"><img
-                                    class="img-fluid" src="../assets/FACEBOOK.png" alt=""></a>
-                            <a class="footerIconsJ" href="https://m.facebook.com/profile.php?id=111693338885516"><img
-                                    class="img-fluid" src="../assets/icons8-yelp-100.png" alt=""></a>
-                            <a class="footerIconsJ"><img class="img-fluid" src="../assets/bestSandwich logo.png"
-                                    alt=""></a>
+                            <a class="footerIconsJ" href="https://m.facebook.com/profile.php?id=111693338885516">
+                                <img class="img-fluid" src="../assets/FACEBOOK.png" alt="">
+                            </a>
+                            <a class="footerIconsJ" href="https://www.yelp.com/biz/best-sandwiches-and-smoothies-stockton">
+                                <img class="img-fluid" src="../assets/icons8-yelp-100.png" alt="">
+                            </a>
+                            <a class="footerIconsJ" href="../index.html">
+                                <img class="img-fluid" src="../assets/bestSandwich logo.png" alt="">
+                            </a>
                         </div>
                     </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="container-fluid appearJ" style="padding-left: 20px; padding-right: 20px;">
+        <div class="row">
+            <div class="col">
+                <p class="yellowJ footerFontSize" style="margin-bottom: 5px;">
+                    <img class="phoneImageJ" src="../assets/phone symbol.png" alt="">
+                    <a class="yellowJ" href="" style="padding-left: 15px">(209) 475-0652</a>
+                </p>
+                <p class="yellowJ footerFontSize" style="width: 115px;">
+                    3330 E Hammer Ln Ste C Stockton, CA 95212
+                </p>
+            </div>
+            <div class="col">
+                <div class="row rightJ">
+                    <a class="footerIconsMobileJ" href="https://m.facebook.com/profile.php?id=111693338885516">
+                        <img class="img-fluid" src="../assets/FACEBOOK.png" alt="">
+                    </a>
+                    <a class="footerIconsMobileJ" href="https://www.yelp.com/biz/best-sandwiches-and-smoothies-stockton">
+                        <img class="img-fluid" src="../assets/icons8-yelp-100.png" alt="">
+                    </a>
+                    <a class="footerIconsMobileJ" href="../index.html">
+                        <img class="img-fluid" src="../assets/bestSandwich logo.png" alt="">
+                    </a>
+                </div>
+                <div class="row">
+                    <p class="bSMobileFooterJ yellowJ" style="padding-top: 8px; text-align: end;">Best Sandwiches & Smoothies</p>
                 </div>
             </div>
         </div>
