--- a/pages/Drinks.html
+++ b/pages/Drinks.html
@@ -32,14 +32,14 @@
                 <div class="col centerJ">
                   <div class="row evenJ" style="width: 700px; padding-top: 40px;">
                     <a class="nav-link yellowJ navLinksJ txtCenterJ" style="width: 75px;"
-                      href="./pages/Menu.html">Menu</a>
+                      href="../pages/Menu.html">Menu</a>
                     <a class="nav-link yellowJ navLinksJ txtCenterJ" style="width: 140px;"
-                      href="./pages/ContactUs.html">Contact Us</a>
+                      href="../pages/ContactUs.html">Contact Us</a>
                     <a class="nav-link yellowJ navLinksJ txtCenterJ" style="width: 125px;" aria-current="page"
-                      href="./pages/AboutUs.html">About
+                      href="../pages/AboutUs.html">About
                       Us</a>
                     <a class="nav-link yellowJ navLinksJ txtCenterJ" style="width: 120px;"
-                      href="./pages/BanhMi.html">Banh Mi?</a>
+                      href="../pages/BanhMi.html">Banh Mi?</a>
                   </div>
                 </div>
 
@@ -144,13 +144,11 @@
           <p>Passion Fruit Jelly</p>
         </div>
       </div>
-      <div class="col">
-        <div class="priceText">
-          $0.25
-        </div>
-      </div>
-      <div class="col">
-        <img src="../assssssssssssssssssssssssets/sandwich1.png" style="float: right;width:654px;height:482px;" alt="">
+      <div class="col priceText">
+        $0.25
+    </div>
+      <div class="col drinkPos">
+        <img class="drinkImage" src="../assssssssssssssssssssssssets/boba.jpg" style="float: right;width:652px;height:482px; object-fit: cover" alt="">
       </div>
     </div>
 
@@ -169,13 +167,11 @@
           <p>Iced Green Milk Tea</p>
         </div>
       </div>
-      <div class="col">
-        <div class="priceText">
-          $5.69
-        </div>
-      </div>
-      <div class="col">
-        <img src="../assssssssssssssssssssssssets/sandwich1.png" style="float: right;width:656px;height:378px;" alt="">
+      <div class="col priceText">
+        $5.69
+    </div>
+      <div class="col drinkPos">
+        <img class="drinkImage" src="../assssssssssssssssssssssssets/drink2.jpg" style="float: right;width:652px;height:378px; object-fit: cover" alt="">
       </div>
     </div>
 
@@ -195,13 +191,11 @@
           <p>Iced Lychee Green Milk Tea</p>
         </div>
       </div>
-      <div class="col">
-        <div class="priceText">
-          $5.69
-        </div>
-      </div>
-      <div class="col">
-        <img src="../assssssssssssssssssssssssets/sandwich1.png" style="float: right;width:656px;height:378px;" alt="">
+      <div class="col priceText">
+        $5.69
+    </div>
+      <div class="col drinkPos">
+        <img class="drinkImage" src="../assssssssssssssssssssssssets/drink3.jpg" style="float: right;width:652px;height:361px; object-fit: cover" alt="">
       </div>
     </div>
 
@@ -224,13 +218,11 @@
           <p>Dreamy Strawberry Banana</p>
         </div>
       </div>
-      <div class="col">
-        <div class="priceText">
-          $5.89
-        </div>
-      </div>
-      <div class="col">
-        <img src="../assssssssssssssssssssssssets/sandwich1.png" style="float: right;width:656px;height:378px;" alt="">
+      <div class="col priceText">
+        $5.89
+    </div>
+      <div class="col drinkPos">
+        <img class="drinkImage" src="../assssssssssssssssssssssssets/drink4.jpg" style="float: right;width:652px;height:545px; object-fit: cover" alt="">
       </div>
     </div>
 
@@ -252,13 +244,11 @@
           <p>Green Tea Gangbusters</p>
         </div>
       </div>
-      <div class="col">
-        <div class="priceText">
+      <div class="col priceText">
           $5.89
-        </div>
       </div>
-      <div class="col">
-        <img src="../assssssssssssssssssssssssets/sandwich1.png" style="float: right;width:656px;height:378px;" alt="">
+      <div class="col drinkPos">
+        <img class="drinkImage" src="../assssssssssssssssssssssssets/drink5.png" style="float: right;width:652px;height:532px; object-fit: cover; object-position: 0px -210px ;" alt="">
       </div>
     </div>
 
@@ -272,7 +262,7 @@
       <div class="carousel-inner">
         <div class="carousel-item active">
           <div class="row centerJ">
-            <img class="reviewImgJ" src="../assssssssssssssssssssssssets/review1.jpg" alt="">
+            <img class="reviewImgJ" src="../assssssssssssssssssssssssets/review1.png" alt="">
           </div>
           <div class="row centerJ">
             <img class="starJ" src="../assets/Star.png" alt="">
@@ -306,7 +296,7 @@
         </div>
         <div class="carousel-item">
           <div class="row centerJ">
-            <img class="reviewImgJ" src="../assets/Ellipse 1.png" alt="">
+            <img class="reviewImgJ" src="../assssssssssssssssssssssssets/Review2.png" alt="">
           </div>
           <div class="row centerJ">
             <img class="starJ" src="../assets/Star.png" alt="">
@@ -341,7 +331,7 @@
         </div>
         <div class="carousel-item">
           <div class="row centerJ">
-            <img class="reviewImgJ" src="../assssssssssssssssssssssssets/review1.jpg" alt="">
+            <img class="reviewImgJ" src="../assssssssssssssssssssssssets/review3.png" alt="">
           </div>
           <div class="row centerJ">
             <img class="starJ" src="../assets/Star.png" alt="">
@@ -357,7 +347,7 @@
             </p>
           </div>
           <div class="row centerJ">
-            <img class="quotesJ" src="./assets/Quotes.png" alt="">
+            <img class="quotesJ" src="../assets/Quotes.png" alt="">
           </div>
           <div class="row">
             <p class="txtCenterJ">Arianna P.</p>
