--- a/pages/Menu.html
+++ b/pages/Menu.html
@@ -223,20 +223,14 @@
                     </div>
                     <div class="row">
                         <p class="txtCenterJ">
-                            The BEST place to get banh mi and smoothies in Stockton. Their sandwiches are smaller
-                            compared to other restaurants but are packed with sooo much flavor. I usually go for the
-                            #3 grilled pork and maybe an occasional almond/avocado smoothie. Their boba is better
-                            than some shops that specialize in boba drinks. It's always chewy and sweet. This place
-                            is cash only and I've seen the same lady at the front register for years now. She's
-                            sweet and I could tell she is a hard worker. Always gotta support this place when I have
-                            a craving for it!!
+                            Perfect Vietnamese sandwich, super affordable and really tasty. meat is always tasty and soft and the baguette is nice and fresh. worth checking out.
                         </p>
                     </div>
                     <div class="row centerJ">
                         <img class="quotesJ" src="./assets/Quotes.png" alt="">
                     </div>
                     <div class="row">
-                        <p class="txtCenterJ">Tina T</p>
+                        <p class="txtCenterJ">Evelyn D.</p>
                     </div>
                     <div class="row">
                         <p class="txtCenterJ">Customer</p>
@@ -260,20 +254,14 @@
                     </div>
                     <div class="row">
                         <p class="txtCenterJ">
-                            The BEST place to get banh mi and smoothies in Stockton. Their sandwiches are smaller
-                            compared to other restaurants but are packed with sooo much flavor. I usually go for the
-                            #3 grilled pork and maybe an occasional almond/avocado smoothie. Their boba is better
-                            than some shops that specialize in boba drinks. It's always chewy and sweet. This place
-                            is cash only and I've seen the same lady at the front register for years now. She's
-                            sweet and I could tell she is a hard worker. Always gotta support this place when I have
-                            a craving for it!!
+                            Their sandwiches are literally the BEST in Stockton! I live in San Jose and it beats san Jose banh mi too. Their bread is toasted warm when you order so make sure you enjoy it as soon as possible. My favorite is the banh mi this nuong and add a slice of cha. The bbq pork is also really delicious! My drink of choice is the strawberry mango smoothie! This taste super refreshing and healthy. Their service is okay, the owners are never friendly but the food is what keeps me coming back.
                         </p>
                     </div>
                     <div class="row centerJ">
                         <img class="quotesJ" src="./assets/Quotes.png" alt="">
                     </div>
                     <div class="row">
-                        <p class="txtCenterJ">Tina T</p>
+                        <p class="txtCenterJ">Vy N.</p>
                     </div>
                     <div class="row">
                         <p class="txtCenterJ">Customer</p>
@@ -297,20 +285,14 @@
                     </div>
                     <div class="row">
                         <p class="txtCenterJ">
-                            The BEST place to get banh mi and smoothies in Stockton. Their sandwiches are smaller
-                            compared to other restaurants but are packed with sooo much flavor. I usually go for the
-                            #3 grilled pork and maybe an occasional almond/avocado smoothie. Their boba is better
-                            than some shops that specialize in boba drinks. It's always chewy and sweet. This place
-                            is cash only and I've seen the same lady at the front register for years now. She's
-                            sweet and I could tell she is a hard worker. Always gotta support this place when I have
-                            a craving for it!!
+                            I loved this place. I had the #1 Combo and the #4. They were both very tasty.You can taste the freshness of the ingredients. The meat was tender and flavorful.The veggies were cool and crisp! Absolutely loved it here!.
                         </p>
                     </div>
                     <div class="row centerJ">
                         <img class="quotesJ" src="./assets/Quotes.png" alt="">
                     </div>
                     <div class="row">
-                        <p class="txtCenterJ">Tina T</p>
+                        <p class="txtCenterJ">Dee M.</p>
                     </div>
                     <div class="row">
                         <p class="txtCenterJ">Customer</p>
