--- a/pages/Drinks.html
+++ b/pages/Drinks.html
@@ -12,11 +12,8 @@
 
 <body>
 
-
-
-  <div class="container-fluid">
-
     <!-- NavBar -->
+    <div class="container-fluid">
     <div class="row">
       <nav class="navbar navbar-expand-lg">
         <div class="container-fluid">
@@ -58,8 +55,9 @@
         </div>
       </nav>
     </div>
+</div>
 
-
+  <div class="container-fluid pageMargin">
     <div class="row">
       <div class="headBox">
         <p>Top Sellers</p>
@@ -130,9 +128,9 @@
     <br>
     <br>
     <div class="row">
-      <div class="col">
+      <div class="col g-0">
         <div class="line"></div>
-        <div class="menuText">Toppings</div>
+        <div class="menuText">Toppings<span class="toppingText">$0.25</span></div>
         <div class="line"></div>
         <div class="drinkText">
           <p>Tapioca Pearls</p>
@@ -144,11 +142,12 @@
           <p>Passion Fruit Jelly</p>
         </div>
       </div>
-      <div class="col priceText">
-        $0.25
-    </div>
-      <div class="col drinkPos">
-        <img class="drinkImage" src="../assssssssssssssssssssssssets/boba.jpg" style="float: right;width:652px;height:482px; object-fit: cover" alt="">
+      <div class="col drinkPos g-0">
+        <div style="padding-top: 75px;">
+          <img class="drinkImage" src="../assssssssssssssssssssssssets/boba.jpg"
+            style="float: right;width:652px;height:482px; object-fit: cover;" alt="">
+        </div>
+
       </div>
     </div>
 
@@ -156,9 +155,9 @@
     <br>
 
     <div class="row">
-      <div class="col-4">
+      <div class="col g-0">
         <div class="line"></div>
-        <div class="menuText">Iced Pearl Drinks</div>
+        <div class="menuText">Iced Pearl Drinks<span class="pearlText">$5.69</span></div>
         <div class="line"></div>
         <div class="drinkText">
           <p>Iced Milk Tea</p>
@@ -167,11 +166,11 @@
           <p>Iced Green Milk Tea</p>
         </div>
       </div>
-      <div class="col priceText">
-        $5.69
-    </div>
-      <div class="col drinkPos">
-        <img class="drinkImage" src="../assssssssssssssssssssssssets/drink2.jpg" style="float: right;width:652px;height:378px; object-fit: cover" alt="">
+      <div class="col drinkPos g-0">
+        <div style="padding-top: 91px;">
+        <img class="drinkImage" src="../assssssssssssssssssssssssets/drink2.jpg"
+          style="float: right;width:652px;height:378px; object-fit: cover" alt="">
+        </div>
       </div>
     </div>
 
@@ -179,9 +178,9 @@
     <br>
 
     <div class="row">
-      <div class="col-4">
+      <div class="col g-0">
         <div class="line"></div>
-        <div class="menuText">Specialty Drinks</div>
+        <div class="menuText">Specialty Drinks<span class="specialText">$5.69</span></div>        
         <div class="line"></div>
         <div class="drinkText">
           <p>Iced Taro Milk Tea</p>
@@ -191,11 +190,12 @@
           <p>Iced Lychee Green Milk Tea</p>
         </div>
       </div>
-      <div class="col priceText">
-        $5.69
-    </div>
-      <div class="col drinkPos">
-        <img class="drinkImage" src="../assssssssssssssssssssssssets/drink3.jpg" style="float: right;width:652px;height:361px; object-fit: cover" alt="">
+
+      <div class="col drinkPos g-0">
+        <div style="padding-top: 107px;">
+        <img class="drinkImage" src="../assssssssssssssssssssssssets/drink3.jpg"
+          style="float: right;width:652px;height:361px; object-fit: cover" alt="">
+        </div>
       </div>
     </div>
 
@@ -203,9 +203,9 @@
     <br>
 
     <div class="row">
-      <div class="col-4">
+      <div class="col g-0">
         <div class="line"></div>
-        <div class="menuText">Smoothies</div>
+        <div class="menuText">Smoothies<span class="smoothieText">$5.89</span></div>
         <div class="line"></div>
         <div class="drinkText">
           <p>All Star Almond</p>
@@ -218,11 +218,11 @@
           <p>Dreamy Strawberry Banana</p>
         </div>
       </div>
-      <div class="col priceText">
-        $5.89
-    </div>
-      <div class="col drinkPos">
-        <img class="drinkImage" src="../assssssssssssssssssssssssets/drink4.jpg" style="float: right;width:652px;height:545px; object-fit: cover" alt="">
+      <div class="col drinkPos g-0">
+        <div style="padding-top: 50px;">
+        <img class="drinkImage" src="../assssssssssssssssssssssssets/drink4.jpg"
+          style="float: right;width:652px;height:545px; object-fit: cover" alt="">
+        </div>
       </div>
     </div>
 
@@ -230,9 +230,9 @@
     <br>
 
     <div class="row">
-      <div class="col-4">
+      <div class="col g-0">
         <div class="line"></div>
-        <div class="menuText">Iced Slushes</div>
+        <div class="menuText">Iced Slushes<span class="slushText">$5.89</span></div>
         <div class="line"></div>
         <div class="drinkText">
           <p>Kiwi King</p>
@@ -244,11 +244,11 @@
           <p>Green Tea Gangbusters</p>
         </div>
       </div>
-      <div class="col priceText">
-          $5.89
-      </div>
-      <div class="col drinkPos">
-        <img class="drinkImage" src="../assssssssssssssssssssssssets/drink5.png" style="float: right;width:652px;height:532px; object-fit: cover; object-position: 0px -210px ;" alt="">
+      <div class="col drinkPos g-0">
+        <div style="padding-top: 42px;">
+        <img class="drinkImage" src="../assssssssssssssssssssssssets/drink5.png"
+          style="float: right;width:652px;height:532px; object-fit: cover; object-position: 0px -210px ;" alt="">
+        </div>
       </div>
     </div>
 
@@ -371,7 +371,7 @@
         <span class="visually-hidden">Next</span>
       </button>
     </div>
-
+</div>
 
 
 
@@ -461,7 +461,7 @@
 
 
 
-  </div>
+  
 
 
 
